--- a/kadai/index.html
+++ b/kadai/index.html
@@ -43,41 +43,47 @@
         <section id="month-1" class="kadai-section">
           <h2 data-en="HTML/CSS">１ヶ月目</h2>
           <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officiis
-            esse eveniet ex facere incidunt.
+            htmlの授業ではHTML Living
+            Standardの仕様に基づき様々な要素の使い方を学びました。<br />
+            header要素やnav要素、section要素を用いて明示的に文書構造を示すことが出来るようになりました。<br />
+            h1~h6を使用し、適切な見出しの設定を行い、適切なアウトラインの設定が可能です。
+          </p>
+          <p>
+            cssではアクセシビリティやユーザビリティを考慮したページデザインを学びました。
           </p>
 
           <ul class="kadai-list">
             <li><a href="#">課題１</a></li>
             <li><a href="#">課題２</a></li>
             <li><a href="#">課題３</a></li>
-            <li><a href="#">課題４</a></li>
+            <li><a href="season/" target="_blank">日本の四季</a></li>
           </ul>
         </section>
         <section id="month-2" class="kadai-section">
           <h2 data-en="JavaScript/JQuery">２ヶ月目</h2>
           <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officiis
-            esse eveniet ex facere incidunt.
+            DOMの操作やif文、for文といったプログラミングの基本から、Ajaxで外部ファイル化を非同期通信で最適化させる方法を学びました。<br />
+            ではさまざまなプラグインを使用し、リッチな表現をページに取り入れました。また、cssと合わせてアニメーションを作成しました。<br />
+            Codepenに掲載
           </p>
 
           <ul class="kadai-list">
             <li><a href="#">課題１</a></li>
             <li><a href="#">課題２</a></li>
             <li><a href="#">課題３</a></li>
-            <li><a href="#">課題４</a></li>
+            <li><a href="gacha/" target="_blank">3連続ガチャ</a></li>
           </ul>
         </section>
         <section id="month-3" class="kadai-section">
           <h2 data-en="レスポンシブデザイン">３ヶ月目</h2>
           <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officiis
-            esse eveniet ex facere incidunt.
+            メディアクエリを使う事でモバイルフレンドリーなサイトを作る事が出来るようになりました。<br />
+            cssの新しい機能を使う事で今までビットマップ画像でしか出来なかったグラデーションやクリッピングをcssだけで表現する事が可能になりました。
           </p>
 
           <ul class="kadai-list">
-            <li><a href="#">課題１</a></li>
-            <li><a href="#">課題２</a></li>
+            <li><a href="../restaurant-site/" target="_blank">レストランサイト</a></li>
+            <li><a href="furniture-store/" target="_blank">北洋風の家具サイト</a></li>
             <li><a href="#">課題３</a></li>
             <li><a href="#">課題４</a></li>
           </ul>
