--- a/kadai/index.html
+++ b/kadai/index.html
@@ -29,14 +29,10 @@
         </div>
         <div class="main-copy">
           <h2>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veritatis,
-            magni.
+            ここはフェリカ・テクニカルアカデミーで作成した習作をまとめたページです。
           </h2>
           <p class="lead">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam est
-            eum, fuga modi minus reprehenderit aspernatur illo tenetur obcaecati
-            nam sequi repellat repudiandae officia eveniet! Velit minus eius
-            consectetur? Temporibus!
+            フェリカ・テクニカルアカデミーでは、6ヶ月でHTML、CSS、JavaScript、jQuery、PHP、WordPress、gitなどの技術を学びます。<br />さらにPhotoShopなどのデザインツールでバナーやカンプ作成も学びました。
           </p>
         </div>
 
@@ -55,7 +51,7 @@
           <ul class="kadai-list">
             <li><a href="#">課題１</a></li>
             <li><a href="#">課題２</a></li>
-            <li><a href="#">課題３</a></li>
+            <li><a href="edamame/">枝豆２カラム</a></li>
             <li><a href="season/" target="_blank">日本の四季</a></li>
           </ul>
         </section>
@@ -82,8 +78,12 @@
           </p>
 
           <ul class="kadai-list">
-            <li><a href="../restaurant-site/" target="_blank">レストランサイト</a></li>
-            <li><a href="furniture-store/" target="_blank">北洋風の家具サイト</a></li>
+            <li>
+              <a href="../restaurant-site/" target="_blank">レストランサイト</a>
+            </li>
+            <li>
+              <a href="furniture-store/" target="_blank">北洋風の家具サイト</a>
+            </li>
             <li><a href="#">課題３</a></li>
             <li><a href="#">課題４</a></li>
           </ul>
