--- a/kadai/index.html
+++ b/kadai/index.html
@@ -51,7 +51,7 @@
           <ul class="kadai-list">
             <li><a href="#">課題１</a></li>
             <li><a href="#">課題２</a></li>
-            <li><a href="edamame/">枝豆２カラム</a></li>
+            <li><a href="edamame/" target="_blank">枝豆２カラム</a></li>
             <li><a href="season/" target="_blank">日本の四季</a></li>
           </ul>
         </section>
@@ -66,7 +66,7 @@
           <ul class="kadai-list">
             <li><a href="#">課題１</a></li>
             <li><a href="#">課題２</a></li>
-            <li><a href="#">課題３</a></li>
+            <li><a href="donuts-shop/" target="_blank">donuts-shop</a></li>
             <li><a href="gacha/" target="_blank">3連続ガチャ</a></li>
           </ul>
         </section>
