--- a/kadai/index.html
+++ b/kadai/index.html
@@ -49,9 +49,13 @@
           </p>
 
           <ul class="kadai-list">
-            <li><a href="#">課題１</a></li>
-            <li><a href="#">課題２</a></li>
-            <li><a href="edamame/" target="_blank">枝豆２カラム</a></li>
+            <li><a href="split/" target="_blank">スプリットレイアウト</a></li>
+            <li>
+              <a href="columns/" target="_blank">メイソンリーレイアウト</a>
+            </li>
+            <li>
+              <a href="edamame/" target="_blank">枝豆２カラムレイアウト</a>
+            </li>
             <li><a href="season/" target="_blank">日本の四季</a></li>
           </ul>
         </section>
@@ -64,8 +68,8 @@
           </p>
 
           <ul class="kadai-list">
-            <li><a href="#">課題１</a></li>
-            <li><a href="#">課題２</a></li>
+            <li><a href="#" target="_blank">課題１</a></li>
+            <li><a href="#" target="_blank">課題２</a></li>
             <li><a href="donuts-shop/" target="_blank">donuts-shop</a></li>
             <li><a href="gacha/" target="_blank">3連続ガチャ</a></li>
           </ul>
@@ -84,8 +88,8 @@
             <li>
               <a href="furniture-store/" target="_blank">北洋風の家具サイト</a>
             </li>
-            <li><a href="#">課題３</a></li>
-            <li><a href="#">課題４</a></li>
+            <li><a href="#" target="_blank">課題３</a></li>
+            <li><a href="#" target="_blank">課題４</a></li>
           </ul>
         </section>
         <section id="month-4" class="kadai-section">
