--- a/kadai/index.html
+++ b/kadai/index.html
@@ -88,8 +88,83 @@
             <li>
               <a href="furniture-store/" target="_blank">北洋風の家具サイト</a>
             </li>
-            <li><a href="#" target="_blank">課題３</a></li>
-            <li><a href="#" target="_blank">課題４</a></li>
+            <li>
+              <a
+                href="https://codepen.io/HIROYUKI-the-sans/pen/bGPKxJb"
+                target="_blank"
+                >display:grid</a
+              >
+            </li>
+            <li>
+              <p
+                class="codepen"
+                data-height="300"
+                data-default-tab="html,result"
+                data-slug-hash="bGPKxJb"
+                data-pen-title="grid,minmax要素の最小幅を指定"
+                data-preview="true"
+                data-user="HIROYUKI-the-sans"
+                style="
+                  height: 300px;
+                  box-sizing: border-box;
+                  display: flex;
+                  align-items: center;
+                  justify-content: center;
+                  border: 2px solid;
+                  margin: 1em 0;
+                  padding: 1em;
+                "
+              >
+                <span
+                  >See the Pen
+                  <a href="https://codepen.io/HIROYUKI-the-sans/pen/bGPKxJb">
+                    grid,minmax要素の最小幅を指定</a
+                  >
+                  by HIROYUKI (<a href="https://codepen.io/HIROYUKI-the-sans"
+                    >@HIROYUKI-the-sans</a
+                  >) on <a href="https://codepen.io">CodePen</a>.</span
+                >
+              </p>
+              <script
+                async
+                src="https://cpwebassets.codepen.io/assets/embed/ei.js"
+              ></script>
+            </li>
+            <li>
+              <p
+                class="codepen"
+                data-height="300"
+                data-default-tab="html,result"
+                data-slug-hash="xxNjeVv"
+                data-pen-title="テキストをドローイングで動かすアニメーション"
+                data-preview="true"
+                data-user="HIROYUKI-the-sans"
+                style="
+                  height: 300px;
+                  box-sizing: border-box;
+                  display: flex;
+                  align-items: center;
+                  justify-content: center;
+                  border: 2px solid;
+                  margin: 1em 0;
+                  padding: 1em;
+                "
+              >
+                <span
+                  >See the Pen
+                  <a href="https://codepen.io/HIROYUKI-the-sans/pen/xxNjeVv">
+                    テキストをドローイングで動かすアニメーション</a
+                  >
+                  by HIROYUKI (<a href="https://codepen.io/HIROYUKI-the-sans"
+                    >@HIROYUKI-the-sans</a
+                  >) on <a href="https://codepen.io">CodePen</a>.</span
+                >
+              </p>
+              <script
+                async
+                src="https://cpwebassets.codepen.io/assets/embed/ei.js"
+              ></script>
+            </li>
           </ul>
         </section>
         <section id="month-4" class="kadai-section">
