--- a/kadai/index.html
+++ b/kadai/index.html
@@ -165,6 +165,41 @@
                 src="https://cpwebassets.codepen.io/assets/embed/ei.js"
               ></script>
             </li>
+            <li>
+              <p
+                class="codepen"
+                data-height="300"
+                data-default-tab="html,result"
+                data-slug-hash="XWLYjGg"
+                data-pen-title="お問い合わせフォームvar.2"
+                data-preview="true"
+                data-user="HIROYUKI-the-sans"
+                style="
+                  height: 300px;
+                  box-sizing: border-box;
+                  display: flex;
+                  align-items: center;
+                  justify-content: center;
+                  border: 2px solid;
+                  margin: 1em 0;
+                  padding: 1em;
+                "
+              >
+                <span
+                  >See the Pen
+                  <a href="https://codepen.io/HIROYUKI-the-sans/pen/XWLYjGg">
+                    お問い合わせフォームvar.2</a
+                  >
+                  by HIROYUKI (<a href="https://codepen.io/HIROYUKI-the-sans"
+                    >@HIROYUKI-the-sans</a
+                  >) on <a href="https://codepen.io">CodePen</a>.</span
+                >
+              </p>
+              <script
+                async
+                src="https://cpwebassets.codepen.io/assets/embed/ei.js"
+              ></script>
+            </li>
           </ul>
         </section>
         <section id="month-4" class="kadai-section">
