--- a/kadai/index.html
+++ b/kadai/index.html
@@ -11,6 +11,12 @@
       <header>
         <h1>Felicaの課題まとめ</h1>
         <p>授業の課題を時系列にまとめたページです。</p>
+        <p>
+          学んだことを<a href="http://webcoder2024.starfree.jp/Wordpress/"
+            >ブログ</a
+          >にしました。
+        </p>
+
         <nav id="g-nav">
           <ul>
             <li id="list-1"><a href="#month-1">１ヶ月目</a></li>
