--- a/kadai/index.html
+++ b/kadai/index.html
@@ -12,7 +12,7 @@
         <h1>Felicaの課題まとめ</h1>
         <p>授業の課題を時系列にまとめたページです。</p>
         <p>
-          学んだことを<a href="http://webcoder2024.starfree.jp/Wordpress/"
+          学んだことを<a target="_blank" href="http://webcoder2024.starfree.jp/Wordpress/"
             >ブログ</a
           >にしました。
         </p>
