--- a/restaurant-site-multi/index.html
+++ b/restaurant-site-multi/index.html
@@ -31,9 +31,27 @@
       <span class="h1-span">Napoli Sole</span>
       <p class="tag-line">最高の食材で、本場の味を。</p>
       <ul class="lang-btn">
-        <li><a href="#" id="btn-ja">日本語</a></li>
-        <li><a href="#" id="btn-it">Italiano</a></li>
-        <li><a href="#" id="btn-fr">Francais</a></li>
+        <li>
+          <a
+            href="https://coder-hiro.github.io/restaurant-site-multi/"
+            id="btn-ja"
+            >日本語</a
+          >
+        </li>
+        <li>
+          <a
+            href="https://coder--hiro-github-io.translate.goog/restaurant-site-multi/?_x_tr_sl=ja&_x_tr_tl=it&_x_tr_hl=ja"
+            id="btn-it"
+            >Italiano</a
+          >
+        </li>
+        <li>
+          <a
+            href="https://coder--hiro-github-io.translate.goog/restaurant-site-multi/?_x_tr_sl=ja&_x_tr_tl=fr&_x_tr_hl=ja"
+            id="btn-fr"
+            >Francais</a
+          >
+        </li>
       </ul>
     </header>
 
