--- a/restaurant-site-multi/index.html
+++ b/restaurant-site-multi/index.html
@@ -284,6 +284,20 @@
         <small>&copy; <span id="this-year"></span> Napoli Sole</small>
       </p>
     </footer>
+
+    <script>
+      //#lang-jaのURLを日本語ページに変更
+      document.querySelector("#btn-ja").href =
+        "https://coder-hiro.github.io/restaurant-site-multi/";
+
+      // #lang-enのURLをイタリア語ページに変更
+      document.querySelector("#btn-it").href =
+        "https://coder--hiro-github-io.translate.goog/restaurant-site-multi/?_x_tr_sl=ja&_x_tr_tl=it&_x_tr_hl=ja";
+      // #lang-zhのURLをフランス語ページに変更
+
+      document.querySelector("#btn-fr").href =
+        "https://coder--hiro-github-io.translate.goog/restaurant-site-multi/?_x_tr_sl=ja&_x_tr_tl=fr&_x_tr_hl=ja";
+    </script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="./js/lib/vegas.js"></script>
     <script src="./js/lib/lightbox.js"></script>
