--- a/Infinity-scroll/page-1/index.html
+++ b/Infinity-scroll/page-1/index.html
@@ -39,7 +39,7 @@
           </div>
         </div>
       </div>
-      <a href="../page-2/" id="next">次のページへ</a>
+      <a href="/infinity-scroll/page-2/" id="next">次のページへ</a>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="./js/jquery.clever-infinite-scroll.js"></script>
