--- a/Infinity-scroll/page-2/index.html
+++ b/Infinity-scroll/page-2/index.html
@@ -16,7 +16,7 @@
           <div class="pages-wrapper">
             <div class="text-box">
               <p>
-                ウェブサイト制作でよく使われるスライダー機能。<br />Swiperというライブラリを使って、画像や<br />テキストをスライドショーのように表示する方法を、<br />コードを交えて分かりやすく解説します。<br>初心者でも作り方が学べる内容です。
+                ウェブサイト制作でよく使われるスライダー機能。<br />Swiperというライブラリを使って、画像や<br />テキストをスライドショーのように表示する方法を、<br />コードを交えて分かりやすく解説します。<br />初心者でも作り方が学べる内容です。
               </p>
               <h3>目次</h3>
               <ol>
@@ -39,7 +39,7 @@
           </div>
         </div>
       </div>
-      <a href="../page-3/" id="next">次のページへ</a>
+      <a href="/infinity-scroll/page-3/" id="next">次のページへ</a>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="./js/jquery.clever-infinite-scroll.js"></script>
