--- a/Infinity-scroll/page-3/index.html
+++ b/Infinity-scroll/page-3/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HTMLだけでポップアップを作成する方法！ポップオーバーの使い方を徹底解説</title>
+    <title>
+      HTMLだけでポップアップを作成する方法！ポップオーバーの使い方を徹底解説
+    </title>
     <link rel="stylesheet" href="../css/reset.css" />
     <link rel="stylesheet" href="../css/style.css" />
   </head>
@@ -12,7 +14,9 @@
     <div id="container">
       <div class="wrapper">
         <div class="pages">
-          <h2>HTMLだけでポップアップを作成する方法！ポップオーバーの使い方を徹底解説</h2>
+          <h2>
+            HTMLだけでポップアップを作成する方法！ポップオーバーの使い方を徹底解説
+          </h2>
           <div class="pages-wrapper">
             <div class="text-box">
               <p>
@@ -28,7 +32,6 @@
             </div>
             <div class="video-wrapper">
               <iframe
-                
                 src="https://www.youtube.com/embed/5oJ5515wMYU?si=w9ssS0gamr6o6tbi"
                 title="YouTube video player"
                 frameborder="0"
@@ -40,7 +43,7 @@
           </div>
         </div>
       </div>
-      <!-- <a href="../page-4/" id="next">次のページへ</a> -->
+      <!-- <a href="/infinity-scroll/page-4/" id="next">次のページへ</a> -->
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="./js/jquery.clever-infinite-scroll.js"></script>
