--- a/kadai/index.html
+++ b/kadai/index.html
@@ -12,7 +12,9 @@
         <h1>Felicaの課題まとめ</h1>
         <p>授業の課題を時系列にまとめたページです。</p>
         <p>
-          学んだことを<a target="_blank" href="http://webcoder2024.starfree.jp/Wordpress/"
+          学んだことを<a
+            target="_blank"
+            href="http://webcoder2024.starfree.jp/Wordpress/"
             >ブログ</a
           >にしました。
         </p>
@@ -230,8 +232,18 @@
           </p>
 
           <ul class="kadai-list">
-            <li><a href="#">課題１</a></li>
-            <li><a href="#">課題２</a></li>
+            <li>
+              <a href="infinity-scroll/" target="_blank"
+                >SEOに適した無限スクロール</a
+              >
+            </li>
+            <li>
+              <a
+                href="http://webcoder2024.starfree.jp/mobile-wp/"
+                target="_blank"
+                >スマホ特化型サイト（WordPress）</a
+              >
+            </li>
             <li><a href="#">課題３</a></li>
             <li><a href="#">課題４</a></li>
           </ul>
