--- a/Infinity-scroll/index.html
+++ b/Infinity-scroll/index.html
@@ -30,8 +30,18 @@
         <a href="#top"><img src="./img/to-top.svg" alt="" /></a>
       </p>
     </div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <script src="./js/jquery.clever-infinite-scroll.js"></script>
-    <script src="./js/script.js"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
+      integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
+      crossorigin="anonymous"
+    ></script>
+    <script src="js/jquery.clever-infinite-scroll.js"></script>
+    <script>
+      $("#container").cleverInfiniteScroll({
+        contentsWrapperSelector: "#container",
+        contentSelector: ".wrapper",
+        nextSelector: "#next",
+      });
+    </script>
   </body>
 </html>
