--- a/Infinity-scroll/page-3/index.html
+++ b/Infinity-scroll/page-3/index.html
@@ -45,13 +45,19 @@
       </div>
       <!-- <a href="/infinity-scroll/page-4/" id="next">次のページへ</a> -->
     </div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <script src="./js/jquery.clever-infinite-scroll.js"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
+      integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
+      crossorigin="anonymous"
+    ></script>
+    <script src="js/jquery.clever-infinite-scroll.js"></script>
     <script>
+      //トップページへのリダイレクト
       setTimeout("redirect()", 0);
       function redirect() {
         location.href = "../index.html";
       }
+
       $("#container").cleverInfiniteScroll({
         contentsWrapperSelector: "#container",
         contentSelector: ".wrapper",
