--- a/Infinity-scroll/page-1/index.html
+++ b/Infinity-scroll/page-1/index.html
@@ -39,7 +39,7 @@
           </div>
         </div>
       </div>
-      <a href="/infinity-scroll/page-2/" id="next">次のページへ</a>
+      <a href="https://coder-hiro.github.io/Infinity-scroll/page-2/" id="next">次のページへ</a>
     </div>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
