--- a/Infinity-scroll/index.html
+++ b/Infinity-scroll/index.html
@@ -25,7 +25,7 @@
           </div>
         </div>
       </div>
-      <a href="https://coder-hiro.github.io/infinity-scroll/page-1/" id="next">次のページへ</a>
+      <a href="/infinity-scroll/page-1/" id="next">次のページへ</a>
       <p class="to-top">
         <a href="#top"><img src="./img/to-top.svg" alt="" /></a>
       </p>
