--- a/Infinity-scroll/page-2/index.html
+++ b/Infinity-scroll/page-2/index.html
@@ -39,14 +39,16 @@
           </div>
         </div>
       </div>
-      <a href="https://coder-hiro.github.io/Infinity-scroll/page-3/" id="next">次のページへ</a>
+      <a href="https://coder-hiro.github.io/Infinity-scroll/page-3/" id="next"
+        >次のページへ</a
+      >
     </div>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
       integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
       crossorigin="anonymous"
     ></script>
-    <script src="js/jquery.clever-infinite-scroll.js"></script>
+    <script src="../js/jquery.clever-infinite-scroll.js"></script>
     <script>
       //トップページへのリダイレクト
       setTimeout("redirect()", 0);
