--- a/Infinity-scroll/index.html
+++ b/Infinity-scroll/index.html
@@ -35,7 +35,7 @@
       integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
       crossorigin="anonymous"
     ></script>
-    <script src="js/jquery.clever-infinite-scroll.js"></script>
+    <script src="./js/jquery.clever-infinite-scroll.js"></script>
     <script>
       $("#container").cleverInfiniteScroll({
         contentsWrapperSelector: "#container",
