--- a/Infinity-scroll/page-1/index.html
+++ b/Infinity-scroll/page-1/index.html
@@ -39,9 +39,7 @@
           </div>
         </div>
       </div>
-      <a href="https://coder-hiro.github.io/Infinity-scroll/page-2/" id="next"
-        >次のページへ</a
-      >
+      <a href="/Infinity-scroll/page-2/index.html" id="next">次のページへ</a>
     </div>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
