--- a/Infinity-scroll/page-1/index.html
+++ b/Infinity-scroll/page-1/index.html
@@ -49,10 +49,10 @@
     <script src="../js/jquery.clever-infinite-scroll.js"></script>
     <script>
       //トップページへのリダイレクト
-      // setTimeout("redirect()", 0);
-      // function redirect() {
-      //   location.href = "../index.html";
-      // }
+      setTimeout("redirect()", 0);
+      function redirect() {
+        location.href = "../index.html";
+      }
 
       $("#container").cleverInfiniteScroll({
         contentsWrapperSelector: "#container",
