--- a/kadai/index.html
+++ b/kadai/index.html
@@ -243,11 +243,11 @@
               >
             </li>
             <li>
-              <a href="infinity-scroll/" target="_blank"
+              <a href="../infinity-scroll/" target="_blank"
                 >SEOに適した無限スクロール</a
               >
             </li>
-            <li><a href="../particle/">パーティクル</a></li>
+            <li><a href="../particle/" target="_blank">パーティクル</a></li>
             <li><a href="#">製作中</a></li>
           </ul>
         </section>
@@ -258,7 +258,7 @@
           </p>
 
           <ul class="kadai-list">
-            <li><a href="../portfolio/">portfolio</a></li>
+            <li><a href="../portfolio/" target="_blank">portfolio</a></li>
           </ul>
         </section>
       </main>
