--- a/kadai/index.html
+++ b/kadai/index.html
@@ -243,7 +243,9 @@
               >
             </li>
             <li>
-              <a href="https://coder-hiro.github.io/Infinity-scroll/" target="_blank"
+              <a
+                href="https://coder-hiro.github.io/Infinity-scroll/"
+                target="_blank"
                 >SEOに適した無限スクロール</a
               >
             </li>
