--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -90,12 +90,13 @@
         <div class="works-btn">
           <button type="button" data-filter="all">ALL ITEN</button>
           <button type="button" data-filter=".html">HTML/CSS</button>
+          <button type="button" data-filter=".js">JavaScript</button>
           <button type="button" data-filter=".wp">WordPress</button>
-          <button type="button" data-filter=".video">Video</button>
           <button type="button" data-filter=".studio">Studio</button>
         </div>
+
         <div class="works-wrapper">
-          <div class="works-box mix wp video">
+          <div class="works-box mix wp js">
             <a
               href="javascript:;"
               data-fancybox
@@ -107,7 +108,7 @@
             ></a>
           </div>
 
-          <div class="works-box mix html">
+          <div class="works-box mix html js">
             <a
               href="javascript:;"
               data-fancybox
@@ -119,7 +120,7 @@
             ></a>
           </div>
 
-          <div class="works-box mix html">
+          <div class="works-box mix html js">
             <a
               href="javascript:;"
               data-fancybox
