--- a/portfolio/modal-site/site-2.html
+++ b/portfolio/modal-site/site-2.html
@@ -23,11 +23,11 @@
         <dt>制作時間</dt>
         <dd>20時間</dd>
         <dt>制作ツール</dt>
-        <dd>vscode/PhotoShop/Figma</dd>
+        <dd>VScode/PhotoShop/Illustrator</dd>
         <dt>使用言語</dt>
-        <dd>HTML/css/JavaScript/jQuery</dd>
+        <dd>HTML/CSS/JavaScript/jQuery</dd>
         <dt>担当作業</dt>
-        <dd>ライティング/コーディング</dd>
+        <dd>用件定義/ライティング/コーディング</dd>
         <dt>URL</dt>
         <dd>
           <a
@@ -39,11 +39,11 @@
       </dl>
 
       <div class="point">
-        <h2>スマホに特化したデザインページWordPress化</h2>
+        <h2>架空のイタリアンレストラン制作</h2>
         <ul>
-          <li>チケット購入ページを作成し自動返信機能を追加</li>
-          <li>ユーザー設定をしターゲットに合わせたデザイン</li>
-          <li>各コンテンツをcmsで管理できるようにした</li>
+          <li>Topページ・予約ページ・Thanksページの3ページ構成</li>
+          <li>Top画像はVEGAS2を使用し3枚の画像を切替え表示</li>
+          <li>パララックスを使用した視差効果を実装</li>
         </ul>
       </div>
     </div>
