--- a/portfolio/modal-site/site-3.html
+++ b/portfolio/modal-site/site-3.html
@@ -21,13 +21,13 @@
       </div>
       <dl>
         <dt>制作時間</dt>
-        <dd>20時間</dd>
+        <dd>15時間</dd>
         <dt>制作ツール</dt>
-        <dd>vscode/PhotoShop/Figma</dd>
+        <dd>VScode/PhotoShop</dd>
         <dt>使用言語</dt>
-        <dd>HTML/css/JavaScript/jQuery/Sass</dd>
+        <dd>HTML/CSS/JavaScript/jQuery</dd>
         <dt>担当作業</dt>
-        <dd>用件定義/ライティング/コーディング/WordPress</dd>
+        <dd>用件定義/コーディング</dd>
         <dt>URL</dt>
         <dd>
           <a href="https://coder-hiro.github.io/donuts-shop/" target="_blank"
@@ -37,11 +37,11 @@
       </dl>
 
       <div class="point">
-        <h2>スマホに特化したデザインページWordPress化</h2>
+        <h2>架空のドーナッツショップ制作</h2>
         <ul>
-          <li>チケット購入ページを作成し自動返信機能を追加</li>
-          <li>ユーザー設定をしターゲットに合わせたデザイン</li>
-          <li>各コンテンツをcmsで管理できるようにした</li>
+          <li>bxSliderを使用し、Top画像3枚を切替え表示させる</li>
+          <li>パララックスを使用した視差効果を実装</li>
+          <li>トップページにCTAを配置したデザイン</li>
         </ul>
       </div>
     </div>
