--- a/portfolio/modal-site/site-9.html
+++ b/portfolio/modal-site/site-9.html
@@ -12,22 +12,20 @@
     </header>
     <div class="page-inner">
       <div class="main-head">
-        <div class="main-visual">
+        <div class="main-visual studio-pc">
           <img src="../img/site-9pc.webp" alt="" />
         </div>
-        <div class="main-visual">
+        <div class="main-visual studio-sp">
           <img src="../img/site-9sp.webp" alt="" />
         </div>
       </div>
       <dl>
         <dt>制作時間</dt>
-        <dd>20時間</dd>
+        <dd>8時間</dd>
         <dt>制作ツール</dt>
-        <dd>vscode/PhotoShop/Figma</dd>
-        <dt>使用言語</dt>
-        <dd>HTML/css/JavaScript/jQuery/Sass</dd>
+        <dd>Studio</dd>
         <dt>担当作業</dt>
-        <dd>用件定義/ライティング/コーディング/WordPress</dd>
+        <dd>コーディング</dd>
         <dt>URL</dt>
         <dd>
           <a href="https://pink043278.studio.site/" target="_blank"
@@ -37,11 +35,11 @@
       </dl>
 
       <div class="point">
-        <h2>スマホに特化したデザインページWordPress化</h2>
+        <h2>自主サイト制作企画</h2>
         <ul>
-          <li>チケット購入ページを作成し自動返信機能を追加</li>
-          <li>ユーザー設定をしターゲットに合わせたデザイン</li>
-          <li>各コンテンツをcmsで管理できるようにした</li>
+          <li>STUDIO独自の操作方法や機能を学ぶ</li>
+          <li>div要素にテキストや画像を配置</li>
+          <li>レスポンシブ対応し公開</li>
         </ul>
       </div>
     </div>
