--- a/portfolio/modal-site/site-6.html
+++ b/portfolio/modal-site/site-6.html
@@ -21,13 +21,13 @@
       </div>
       <dl>
         <dt>制作時間</dt>
-        <dd>20時間</dd>
+        <dd>10時間</dd>
         <dt>制作ツール</dt>
-        <dd>vscode/PhotoShop/Figma</dd>
+        <dd>VScode</dd>
         <dt>使用言語</dt>
-        <dd>HTML/css/JavaScript/jQuery/Sass</dd>
+        <dd>HTML/CSS/Sass</dd>
         <dt>担当作業</dt>
-        <dd>用件定義/ライティング/コーディング/WordPress</dd>
+        <dd>ライティング/コーディング</dd>
         <dt>URL</dt>
         <dd>
           <a href="https://coder-hiro.github.io/season/" target="_blank"
@@ -37,11 +37,11 @@
       </dl>
 
       <div class="point">
-        <h2>スマホに特化したデザインページWordPress化</h2>
+        <h2>日本の四季を紹介するサイト制作</h2>
         <ul>
-          <li>チケット購入ページを作成し自動返信機能を追加</li>
-          <li>ユーザー設定をしターゲットに合わせたデザイン</li>
-          <li>各コンテンツをcmsで管理できるようにした</li>
+          <li>Topページ含めて5ページの構成</li>
+          <li>サイト内リンクを設置</li>
+          <li>後日、レスポンシブ対応</li>
         </ul>
       </div>
     </div>
