--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -75,7 +75,7 @@
                 <a href="https://www.daily-trial.com/web_site/" target="_blank"
                   >オンラインスクール デイトラ</a
                 >にて、Figmaでデザインされたカンプを基に、<br />VSCodeを用いてHTML、CSS、JavaScriptでコーディングの制作経験を<br />積みました。特に、LP制作ではレスポンシブデザインや<br />JavaScriptフレームワークを習得し<a
-                  href="https://hiroyuki-chuman.com/"
+                  href="https://hiroyuki-chuman.com/portfolio/"
                   target="_blank"
                   >ポートフォリオ</a
                 >へ掲載しました。
