--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -72,12 +72,13 @@
                 >と<span>hover</span>のバランスを大切にしデザインの美しさを追求しています。
               </p>
               <p>
+                オンラインスクール
                 <a href="https://www.daily-trial.com/web_site/" target="_blank"
-                  >オンラインスクール デイトラ</a
-                >にて、Figmaでデザインされたカンプを基に、<br />VSCodeを用いてHTML、CSS、JavaScriptでコーディングの制作経験を<br />積みました。特に、LP制作ではレスポンシブデザインや<br />JavaScriptフレームワークを習得し<a
+                  ><span>デイトラ</span></a
+                >では、Figmaでデザインされたカンプを基に、<br />VSCodeを用いてHTML、CSS、JavaScriptでコーディングの制作経験を<br />積みました。特に、LP制作ではレスポンシブデザインや<br />JavaScriptフレームワークを習得し<a
                   href="https://hiroyuki-chuman.com/portfolio/"
                   target="_blank"
-                  >ポートフォリオ</a
+                  ><span>ポートフォリオ</span></a
                 >へ掲載しました。
               </p>
             </div>
