--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -17,6 +17,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css"
     />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <link rel="stylesheet" href="./css/style.css" />
     <style>
       .fancybox-slide--iframe .fancybox-content {
@@ -37,7 +38,7 @@
       </div>
       <div class="header__text">
         <p>
-          池袋にあるスクールで制作した作品集です。<br />授業のカリキュラムは<a
+          池袋のWebデザインスクールで制作した作品集です。<br />授業のカリキュラムは<a
             href="https://felicakunren.com/webcreate/index.html"
             target="_blank"
             >こちら</a
@@ -59,7 +60,9 @@
     <div class="main-visual"></div>
     <main>
       <section class="page-section" id="about">
-        <h2>ABOUT</h2>
+        <div data-aos="fade-up" data-aos-duration="500">
+          <h2>ABOUT</h2>
+        </div>
         <div class="about-container">
           <div class="profile">
             <p class="profile-img">
@@ -71,7 +74,7 @@
                 <span>余白</span
                 >と<span>hover</span>のバランスを大切にしデザインの美しさを追求しています。
               </p>
-              <p>
+              <!-- <p>
                 オンラインスクール
                 <a href="https://www.daily-trial.com/web_site/" target="_blank"
                   ><span>デイトラ</span></a
@@ -80,14 +83,16 @@
                   target="_blank"
                   ><span>ポートフォリオ</span></a
                 >へ掲載しました。
-              </p>
+              </p> -->
             </div>
           </div>
         </div>
       </section>
       <!-- work -->
       <section class="page-section" id="works">
-        <h2>WORKS</h2>
+        <div data-aos="fade-up" data-aos-duration="500">
+          <h2>WORKS</h2>
+        </div>
         <div class="works-btn">
           <button type="button" data-filter="all">ALL ITEN</button>
           <button type="button" data-filter=".html">HTML/CSS</button>
@@ -207,10 +212,12 @@
 
       <!-- skill -->
       <section class="page-section" id="skill">
-        <h2>SKILL</h2>
+        <div data-aos="fade-up" data-aos-duration="500">
+          <h2>SKILL</h2>
+        </div>
         <div class="skill-container">
           <div class="skill-list">
-            <div class="skill-item">
+            <div class="skill-item" data-aos="fade-right">
               <p class="skill-img">
                 <img src="./img/html-1.svg" alt="" />
               </p>
@@ -222,7 +229,7 @@
                 </p>
               </div>
             </div>
-            <div class="skill-item">
+            <div class="skill-item" data-aos="fade-left">
               <p class="skill-img">
                 <img src="./img/css-3.svg" alt="" />
                 <img src="./img/sass-1.svg" alt="" />
@@ -236,7 +243,7 @@
                 </p>
               </div>
             </div>
-            <div class="skill-item">
+            <div class="skill-item" data-aos="fade-right">
               <p class="skill-img">
                 <img src="./img/javascript-1.svg" alt="" />
                 <img src="./img/jquery.svg" alt="" />
@@ -249,7 +256,7 @@
                 </p>
               </div>
             </div>
-            <div class="skill-item">
+            <div class="skill-item" data-aos="fade-left">
               <p class="skill-img">
                 <img src="./img/php-svgrepo-com.svg" alt="" />
               </p>
@@ -260,7 +267,7 @@
                 </p>
               </div>
             </div>
-            <div class="skill-item">
+            <div class="skill-item" data-aos="fade-right">
               <p class="skill-img">
                 <img src="./img/wordpress-icon-1.svg" alt="" />
               </p>
@@ -271,7 +278,7 @@
                 </p>
               </div>
             </div>
-            <div class="skill-item">
+            <div class="skill-item" data-aos="fade-left">
               <p class="skill-img">
                 <img src="./img/github-icon-1.svg" alt="" />
               </p>
@@ -284,7 +291,7 @@
                 </p>
               </div>
             </div>
-            <div class="skill-item">
+            <div class="skill-item" data-aos="fade-right">
               <p class="skill-img">
                 <img src="./img/photoshop-cc-4.svg" alt="" />
               </p>
@@ -293,7 +300,7 @@
                 <p class="skill-text">画像編集、バナー作成</p>
               </div>
             </div>
-            <div class="skill-item">
+            <div class="skill-item" data-aos="fade-left">
               <p class="skill-img">
                 <img src="./img/adobe-illustrator-cs6.svg" alt="" />
               </p>
@@ -323,6 +330,9 @@
     <script>
       const mixer = mixitup(".works-wrapper");
     </script>
+
     <script src="./js/main.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="./js/script.js"></script>
   </body>
 </html>
