--- a/portfolio/modal-site/site-1.html
+++ b/portfolio/modal-site/site-1.html
@@ -31,7 +31,7 @@
         <dt>URL</dt>
         <dd>
           <a href="http://webcoder2024.starfree.jp/mobile-wp/" target="_blank"
-            >http://webcoder2024.starfree.jp/mobile-wp/</a
+            >http://webcoder2024.starfree.jp/<br />mobile-wp/</a
           >
         </dd>
       </dl>
