--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -95,13 +95,25 @@
         </div>
         <div class="works-btn">
           <button type="button" data-filter="all">ALL ITEN</button>
+          <button type="button" data-filter=".wp">WordPress</button>
           <button type="button" data-filter=".html">HTML/CSS</button>
           <button type="button" data-filter=".js">JavaScript</button>
-          <button type="button" data-filter=".wp">WordPress</button>
           <button type="button" data-filter=".studio">Studio</button>
         </div>
 
         <div class="works-wrapper">
+          <div class="works-box mix wp js">
+            <a
+              href="javascript:;"
+              data-fancybox
+              data-type="iframe"
+              data-src="modal-site/site-10.html"
+            >
+              <h3>CG-BIM Studio</h3>
+              <p><img src="./img/site-10pc.webp" alt="" /></p
+            ></a>
+          </div>
+
           <div class="works-box mix wp js">
             <a
               href="javascript:;"
