--- a/Vegas2/index.html
+++ b/Vegas2/index.html
@@ -21,7 +21,7 @@
       </div>
     </div>
 
-    <script src="http://code.jquery.com/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vegas/2.6.0/vegas.min.js"></script>
     <script src="./js/script.js"></script>
   </body>
