--- a/Vegas2/index.html
+++ b/Vegas2/index.html
@@ -22,7 +22,7 @@
       <div class="mv">
         <div class="mvInner">
           <h1 class="mvTitle">HINATA</h1>
-          <p class="mvText">Happy Birthday</p>
+          <p class="mvText">Happy Birthday!</p>
         </div>
       </div>
     </div>
