--- a/Vegas2/index.html
+++ b/Vegas2/index.html
@@ -21,8 +21,10 @@
     <div class="wrapper">
       <div class="mv">
         <div class="mvInner">
+          <div class="mvBox">
           <h1 class="mvTitle">HINATA</h1>
           <p class="mvText">Happy Birthday!</p>
+          <p class="mvMesses">by hiroyuki</p>
         </div>
       </div>
     </div>
