--- a/Vegas2/index.html
+++ b/Vegas2/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>20250208</title>
+    <title>20250207</title>
+    <link rel="shortcut icon" href="./img/favicon.webp" type="image/x-icon" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/vegas/2.6.0/vegas.min.css"
@@ -14,7 +15,6 @@
       href="https://fonts.googleapis.com/css2?family=Agbalumo&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
@@ -22,9 +22,10 @@
       <div class="mv">
         <div class="mvInner">
           <div class="mvBox">
-          <h1 class="mvTitle">HINATA</h1>
-          <p class="mvText">HappyBirthday!</p>
-          <p class="mvMesses">by hiroyuki</p>
+            <h1 class="mvTitle">HINATA</h1>
+            <p class="mvText">HappyBirthday!</p>
+            <p class="mvMesses">by hiroyuki</p>
+          </div>
         </div>
       </div>
     </div>
