--- a/Vegas2/index.html
+++ b/Vegas2/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="robots" content="noindex" />
     <title>20250207</title>
     <link rel="shortcut icon" href="./img/favicon.webp" type="image/x-icon" />
     <link
@@ -22,9 +23,9 @@
       <div class="mv">
         <div class="mvInner">
           <div class="mvBox">
-            <h1 class="mvTitle">HINATA</h1>
-            <p class="mvText">HappyBirthday!</p>
-            <p class="mvMesses">by hiroyuki</p>
+            <h1 class="mvTitle">Hinata</h1>
+            <p class="mvText">Happy Birthday!</p>
+            <p class="mvMesses">by Hiroyuki</p>
           </div>
         </div>
       </div>
